<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_ItemBuffer" Id="{78d9a273-a2d9-42f0-88ca-070f549c346c}">
    <Declaration><![CDATA[TYPE ST_ItemBuffer :
STRUCT
	aBufferData	: ARRAY [0..99] OF ST_Item;	// Data stored in the buffer, 100 elements
	nInPointer	: UDINT;						// Pointer for data put into the buffer
	bClear		: BOOL;							// Clear the Buffer
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>