<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_ItemBufferFdbk" Id="{a03d18f1-8d76-4a7b-b32d-f0ec5b17012b}">
    <Declaration><![CDATA[TYPE ST_ItemBufferFdbk :
STRUCT
	bEmpty		: BOOL;							// Buffer is Empty
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>